--- a/src/components/Footer.astro
+++ b/src/components/Footer.astro
@@ -19,6 +19,7 @@
           <a
             href="#"
             class="text-gray-300 hover:text-white transition-colors duration-200"
+            aria-label="Twitter"
           >
             <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24">
               <path
@@ -29,6 +30,7 @@
           <a
             href="#"
             class="text-gray-300 hover:text-white transition-colors duration-200"
+            aria-label="LinkedIn"
           >
             <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24">
               <path
@@ -39,6 +41,7 @@
           <a
             href="#"
             class="text-gray-300 hover:text-white transition-colors duration-200"
+            aria-label="Pinterest"
           >
             <svg class="h-5 w-5" fill="currentColor" viewBox="0 0 24 24">
               <path
@@ -192,12 +195,6 @@
             href="/personvern"
             class="hover:text-white transition-colors duration-200"
             >Personvern</a
-          >
-          <a href="#" class="hover:text-white transition-colors duration-200"
-            >Vilkår</a
-          >
-          <a href="#" class="hover:text-white transition-colors duration-200"
-            >Cookies</a
           >
         </div>
       </div>
